<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.kevel</groupId>
  <artifactId>spec-driven-demo</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
    <maven.compiler.release>21</maven.compiler.release>
    <maven.compiler.parameters>true</maven.compiler.parameters>

    <maven.surefire.plugin.version>3.5.5</maven.surefire.plugin.version>
    <junit.jupiter.version>5.14.3</junit.jupiter.version>
    <jqwik.version>1.9.3</jqwik.version>
    <fray.version>0.7.3</fray.version>

    <spotbugs.maven.plugin.version>4.9.8.2</spotbugs.maven.plugin.version>

    <errorprone.version>2.48.0</errorprone.version>

    <spotless.maven.plugin.version>3.3.0</spotless.maven.plugin.version>
    <google.java.format.version>1.35.0</google.java.format.version>
    <palantir.java.format.version>2.90.0</palantir.java.format.version>

    <owasp.dependency-check.version>12.2.0</owasp.dependency-check.version>

    <maven.shade.version>3.6.2</maven.shade.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.google.errorprone</groupId>
      <artifactId>error_prone_annotations</artifactId>
      <version>${errorprone.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.jqwik</groupId>
      <artifactId>jqwik</artifactId>
      <version>${jqwik.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.pastalab.fray</groupId>
      <artifactId>fray-junit</artifactId>
      <version>${fray.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>

    <!-- TODO: This profile is to scope OpenJML in isolation, but it's not actively used -->
    <profile>
      <id>openjml</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven.compiler.plugin.version}</version>
            <configuration>
              <release>${maven.compiler.release}</release>

              <fork>true</fork>
              <executable>${project.basedir}/tooling/openjml/openjml</executable>
              <compilerArgs>
                <arg>--esc</arg>
                <arg>--progress</arg>
              </compilerArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <!-- This profile configures Google Errorprone as part of the compilation phase.
         Errorprone is a static analyzer that extends Java's type checking analysis. -->
    <profile>
      <id>errorprone</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven.compiler.plugin.version}</version>
            <configuration>
              <release>${maven.compiler.release}</release>

              <fork>true</fork>
              <executable>${project.basedir}/tooling/jdk-21.0.7+6/bin/javac</executable>
              <compilerArgs>
                <arg>-XDcompilePolicy=simple</arg>
                <arg>--should-stop=ifError=FLOW</arg>
                <arg>-Xplugin:ErrorProne</arg>
                <arg>-XDaddTypeAnnotationsToSymbol=true</arg>

                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
              </compilerArgs>

              <annotationProcessorPaths>
                <path>
                  <groupId>com.google.errorprone</groupId>
                  <artifactId>error_prone_core</artifactId>
                  <version>${errorprone.version}</version>
                </path>
              </annotationProcessorPaths>
	        </configuration>

            <dependencies>
              <!--
              <dependency>
                <groupId>org.codehaus.plexus</groupId>
                <artifactId>plexus-compiler-javac-errorprone</artifactId>
                <version>${plexus.errorprone.compiler.version}</version>
                  </dependency>
              -->
              <dependency>
                <groupId>com.google.errorprone</groupId>
                <artifactId>error_prone_core</artifactId>
                <version>${errorprone.version}</version>
              </dependency>
            </dependencies>
          </plugin>
        </plugins>
      </build>
    </profile>

    <!-- Dev-time profile for interactive use / Clojure REPL access -->
    <profile>
      <id>dev</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.github.johnpoth</groupId>
            <artifactId>jshell-maven-plugin</artifactId>
            <version>1.4</version>
          </plugin>
          <plugin>
            <groupId>com.theoryinpractise</groupId>
            <artifactId>clojure-maven-plugin</artifactId>
            <version>1.9.3</version>
            <extensions>true</extensions>
          </plugin>
        </plugins>
      </build>
      <dependencies>
        <dependency>
          <groupId>org.clojure</groupId>
          <artifactId>clojure</artifactId>
          <version>1.12.4</version>
        </dependency>
      </dependencies>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <release>${maven.compiler.release}</release>

          <fork>true</fork>
          <executable>${project.basedir}/tooling/jdk-21.0.7+6/bin/javac</executable>
        </configuration>
      </plugin>

      <!-- Surefire is the plugin for running JUnit 5 test suites and other tools that integrate into JUnit5 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire.plugin.version}</version>
        <configuration>
          <useModulePath>false</useModulePath>
        </configuration>
      </plugin>
      <!-- Fray is a concurrency testing tool -->
      <plugin>
        <groupId>org.pastalab.fray.maven</groupId>
        <artifactId>fray-plugins-maven</artifactId>
        <version>${fray.version}</version>
        <executions>
          <execution>
            <id>prepare-fray</id>
            <goals>
              <goal>prepare-fray</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.12.0</version>
        <configuration>
            <!-- Custom configurations can go here -->
        </configuration>
      </plugin>

      <!-- Static Analyzers: SpotBugs + FindSecurityBugs -->
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>${spotbugs.maven.plugin.version}</version>
        <configuration>
          <effort>Max</effort>
          <threshold>Medium</threshold>
          <failOnError>true</failOnError>
          <includeFilterFile>${session.executionRootDirectory}/spotbugs-include.xml</includeFilterFile>
          <excludeFilterFile>${session.executionRootDirectory}/spotbugs-exclude.xml</excludeFilterFile>
          <plugins>
            <plugin>
              <groupId>com.h3xstream.findsecbugs</groupId>
              <artifactId>findsecbugs-plugin</artifactId>
              <version>1.14.0</version>
            </plugin>
          </plugins>
        </configuration>
        <executions>
          <execution>
            <id>spotbugs-check</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Spotless is a code formatting tool used to keep all coding styles uniform -->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.maven.plugin.version}</version>
        <configuration>
          <java>
            <!--
            <googleJavaFormat>
              <version>${google.java.format.version}</version>
            </googleJavaFormat>
            -->
            <palantirJavaFormat>
              <version>${palantir.java.format.version}</version>
              <style>PALANTIR</style>
              <formatJavadoc>false</formatJavadoc>
            </palantirJavaFormat>
          </java>
        </configuration>
        <executions>
          <execution>
            <id>spotless-check</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Dependency-check detects publicly disclosed vulnerabilities (CVEs) of project dependencies -->
      <!--
      <plugin>
        <groupId>org.owasp</groupId>
        <artifactId>dependency-check-maven</artifactId>
        <version>${owasp.dependency-check.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      -->

      <!-- Shade is used to produce an Uberjar / Fat Jar during packaging -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>${maven.shade.version}</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>com.kevel.App</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
